tests/snapshots/compiler_messages/output-h8.snap
---
source: tests/runner.rs
description: top-type-sizes -h8
---
7880 {async fn body of run()} align=8
   7879 variant Suspend0
        568 self (upvar) align=8 offset=0
         24 drain (upvar)
        568 self
       6712 __awaitee align=8 type={async fn body of run()}
    592 variant Unresumed
        568 self (upvar) align=8 offset=0
         24 drain (upvar)
